Bug 51834 - UI: Min Max values not displayed on edit "conditional formatting color scale""
Summary: UI: Min Max values not displayed on edit "conditional formatting color scale""
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.0.beta3
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:3.7.0 target:3.6.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-07 09:11 UTC by pierre-yves samyn
Modified: 2012-08-25 13:07 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot after step 6 (9.80 KB, image/png)
2012-07-07 09:11 UTC, pierre-yves samyn
Details
Screenshot after step 9 (10.17 KB, image/png)
2012-07-07 09:12 UTC, pierre-yves samyn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-yves samyn 2012-07-07 09:11:16 UTC
Created attachment 63945 [details]
Screenshot after step 6

Hello

Steps to reproduce :
1. File> New> Spreadsheet
2. Select A1:A10
3. Format> Conditional formatting> Conditional formatting
4. Add> Condition1 : All Cells> Color Scale (2 Entries)
5. Min : type 1 & select a color (chart10 for example)
6. Max : type 10 & select a color (green for example)

See screenshot after step 6

7. Ok
8. Format> Conditional formatting> Conditional formatting
9. Click on condition1 to display/edit the parameters

Expected result : display min & max values and chosen colors
Actual result : colors displayed, but not the values (empty)

See screenshot after step 9

note: this is just a display problem, the setting is registered and functional

Platform : windows 7 64 bits & Version 3.6.0.0.beta3 (Build ID: 3e2b862)

Regards 
Pierre-Yves
Comment 1 pierre-yves samyn 2012-07-07 09:12:38 UTC
Created attachment 63946 [details]
Screenshot after step 9
Comment 2 pierre-yves samyn 2012-07-07 09:15:09 UTC
Reproduced (fr-discuss) with Ubuntu 12.04 en 64 bit
Comment 3 pierre-yves samyn 2012-07-07 21:47:04 UTC
Reproduced (fr-discuss) with windows XP
Comment 4 Markus Mohrhard 2012-07-16 01:47:33 UTC
The problem here is that the value input filed should be disabled when you selecte min or max.

Min and Max are refering to the minimum and maximum value of the range and are dynamically calculated.

I'll have a look at the UI issues. This is not a functional issues.
Comment 5 Not Assigned 2012-07-16 02:32:02 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b85a2af72e3ce0a4111972d51c8f1d43599dee5e

disable edit field for min and max type, fdo#51834
Comment 6 Not Assigned 2012-07-16 08:49:41 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ffdee69b8e653085e4681c264682cfb71761f8db&g=libreoffice-3-6

disable edit field for min and max type, fdo#51834


It will be available in LibreOffice 3.6.
Comment 7 pierre-yves samyn 2012-08-25 13:07:17 UTC
Hello

WORKSFORME with Version 3.6.1.2 (Build ID: e29a214) & Windows 64bits

However, we may wonder why display these two areas because they are not entered by the user and do not display the min-max values ​​of the range ?

Regards
Pierre-Yves