disable edit field for min and max type, fdo#51834

Change-Id: Id77c58f333bfab5446cf96d24cd9ccfc18802862